<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="65dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_user_avatar"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="16dp"
            android:contentDescription="@string/content_description_avatar_user" />

        <LinearLayout
            android:id="@+id/linear_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/iv_user_avatar"
            android:layout_toRightOf="@id/iv_user_avatar"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/tv_name"
                style="@style/TextviewItemRow.PrimaryText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dummy_name" />

            <TextView
                android:id="@+id/tv_company"
                style="@style/TextviewItemRow.SecondaryText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dummy_company" />

            <TextView
                android:id="@+id/tv_location"
                style="@style/TextviewItemRow.SecondaryText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dummy_location" />

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>