<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/detail_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapse_toolbar_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_detail_avatar"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="80dp"
                    android:fitsSystemWindows="true"
                    android:src="@drawable/user1"
                    app:layout_collapseMode="parallax" />

                <TextView
                    android:id="@+id/tv_name"
                    style="@style/TextviewItemRow.PrimaryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="80dp"
                    android:layout_toEndOf="@id/iv_detail_avatar"
                    android:layout_toRightOf="@id/iv_detail_avatar"
                    android:text="@string/dummy_name"
                    android:textColor="@color/colorTextWhite" />

                <TextView
                    android:id="@+id/tv_username"
                    style="@style/TextviewItemRow.SecondaryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_name"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_toEndOf="@id/iv_detail_avatar"
                    android:layout_toRightOf="@id/iv_detail_avatar"
                    android:text="@string/dummy_username"
                    android:textColor="@color/colorTextWhite" />

                <ImageView
                    android:id="@+id/icon_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_username"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_toEndOf="@id/iv_detail_avatar"
                    android:layout_toRightOf="@id/iv_detail_avatar"
                    android:contentDescription="@string/dummy_description_icon"
                    android:src="@drawable/ic_home" />

                <TextView
                    android:id="@+id/tv_company_value"
                    style="@style/TextviewItemRow.SecondaryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_username"
                    android:layout_margin="8dp"
                    android:layout_toEndOf="@id/icon_home"
                    android:layout_toRightOf="@id/icon_home"
                    android:text="@string/dummy_company"
                    android:textColor="@color/colorTextWhite" />

                <ImageView
                    android:id="@+id/icon_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/icon_home"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="4dp"
                    android:layout_toEndOf="@id/iv_detail_avatar"
                    android:layout_toRightOf="@id/iv_detail_avatar"
                    android:contentDescription="@string/dummy_description_icon"
                    android:src="@drawable/ic_location" />

                <TextView
                    android:id="@+id/tv_location_value"
                    style="@style/TextviewItemRow.SecondaryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_company_value"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_toEndOf="@id/icon_home"
                    android:layout_toRightOf="@id/icon_home"
                    android:text="@string/dummy_location"
                    android:textColor="@color/colorTextWhite" />


                <LinearLayout
                    android:id="@+id/linear_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_location_value"

                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <TextView
                        android:id="@+id/tv_repository_value"
                        style="@style/TextviewItemRow.PrimaryText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/dummy_repository"
                        android:textAlignment="center"
                        android:textColor="@color/colorTextWhite"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/tv_followers_value"
                        style="@style/TextviewItemRow.PrimaryText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/dummy_followers"
                        android:textAlignment="center"
                        android:textColor="@color/colorTextWhite"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/tv_following_value"
                        style="@style/TextviewItemRow.PrimaryText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/dummy_following"
                        android:textAlignment="center"
                        android:textColor="@color/colorTextWhite"
                        android:textSize="22sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/linear_title"

                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginBottom="24dp"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <TextView
                        android:id="@+id/tv_repository_title"
                        style="@style/TextviewItemRow.SecondaryText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/respository_title"
                        android:textAlignment="center"
                        android:textColor="@color/colorTextWhite" />

                    <TextView
                        android:id="@+id/tv_followers_title"
                        style="@style/TextviewItemRow.SecondaryText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/followers_title"
                        android:textAlignment="center"
                        android:textColor="@color/colorTextWhite" />

                    <TextView
                        android:id="@+id/tv_following_title"
                        style="@style/TextviewItemRow.SecondaryText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/following_title"
                        android:textAlignment="center"
                        android:textColor="@color/colorTextWhite" />

                </LinearLayout>


            </RelativeLayout>


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/detail_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimaryDark"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_relative_detail">

            <TextView
                android:id="@+id/githubRepoTitle"
                style="@style/TextviewItemRow.SecondaryText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:padding="8dp"
                android:text="@string/popular_repositories_title" />


        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>




